Kubernetes_Version/blogpost-depl-serv.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blogpost
  labels:
    app: blogpost
spec:
  replicas: 2
  # strategy:
  #   type: RollingUpdate
  #   rollingUpdate:
  #     maxSurge: 2        # how many pods we can add at a time
  #     maxUnavailable: 0
  selector:
    matchLabels:
      app: blogpost
  template:
    metadata:
      labels:
        app: blogpost
    spec:
      containers:
      - name: blogpost
        image: soberservicesguy/portfolio-images:content_blogpost_171
        resources:
          limits:
            cpu: "200m"
            memory: "300Mi"
        ports:
        - containerPort: 5001
      imagePullSecrets:
      - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: blogpost-service
spec:
  type: NodePort
  # type: ClusterIP
  selector:
    app: blogpost
  ports:
    - protocol: TCP
      targetPort: 5001
      port: 5001
