Kubernetes_Version/frontend-depl-serv.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: content-frontend
  labels:
    app: content-frontend
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: content-frontend
    spec:
      containers:
      - name: content-frontend
        image: soberservicesguy/portfolio-images:content_frontend_156
        ports:
          - containerPort: 80
            name: http-port
        resources:
          limits:
            cpu: "50m"
            memory: "150Mi"
      imagePullSecrets:
      - name: regcred
  selector:
    matchLabels:
      app: content-frontend
---
apiVersion: v1
kind: Service
metadata:
  name: content-frontend-service
spec:
  type: NodePort
  selector:
    app: content-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
