Kubernetes_Version/image-depl-serv.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: image
  labels:
    app: image
spec:
  replicas: 2
  # strategy:
  #   type: RollingUpdate
  #   rollingUpdate:
  #     maxSurge: 2        # how many pods we can add at a time
  #     maxUnavailable: 0
  selector:
    matchLabels:
      app: image
  template:
    metadata:
      labels:
        app: image
    spec:
      containers:
      - name: image
        image: soberservicesguy/portfolio-images:content_image_167
        resources:
          limits:
            cpu: "200m"
            memory: "300Mi"
        ports:
        - containerPort: 5003
      imagePullSecrets:
      - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: image-service
spec:
  type: NodePort
  # type: ClusterIP
  selector:
    app: image
  ports:
    - protocol: TCP
      targetPort: 5003
      port: 5003
