Kubernetes_Version/video-depl-serv.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: video
  labels:
    app: video
spec:
  replicas: 2
  # strategy:
  #   type: RollingUpdate
  #   rollingUpdate:
  #     maxSurge: 2        # how many pods we can add at a time
  #     maxUnavailable: 0
  selector:
    matchLabels:
      app: video
  template:
    metadata:
      labels:
        app: video
    spec:
      containers:
      - name: video
        image: soberservicesguy/portfolio-images:content_video_3
        resources:
          limits:
            cpu: "200m"
            memory: "300Mi"
        ports:
        - containerPort: 5005
      imagePullSecrets:
      - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: video-service
spec:
  type: NodePort
  # type: ClusterIP
  selector:
    app: video
  ports:
    - protocol: TCP
      targetPort: 5005
      port: 5005
